--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -94,7 +94,7 @@ body {
 }
 
 .header {
-  background-image: url("assets/header.jpg");
+  background-image: url("/Frontend/assets/header.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -286,7 +286,7 @@ nav {
 }
 
 .service {
-  background-image: url("assets/service.png");
+  background-image: url("/Frontend/assets/service.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -388,7 +388,7 @@ nav {
     minmax(1rem, 1fr)
     minmax(0, var(--max-width))
     minmax(1rem, 1fr);
-  background-image: url("assets/explore.png");
+  background-image: url("/Frontend/assets/explore.png");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
